--- a/imgui.ini
+++ b/imgui.ini
@@ -43,3 +43,13 @@ Pos=60,60
 Size=225,144
 Collapsed=0
 
+[Window][obj1]
+Pos=60,60
+Size=229,157
+Collapsed=0
+
+[Window][obj2]
+Pos=197,54
+Size=233,164
+Collapsed=0
+
