--- a/MyEngine1.vcxproj
+++ b/MyEngine1.vcxproj
@@ -58,13 +58,13 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(ProjectDir)\externals\nlohmann;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)\externals\nlohmann;$(ProjectDir)\Colider;$(ProjectDir)\Math;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(ProjectDir)\externals\nlohmann;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)\externals\nlohmann;$(ProjectDir)\Colider;$(ProjectDir)\Math;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Test|x64'">
-    <IncludePath>$(ProjectDir)\externals\nlohmann;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)\externals\nlohmann;$(ProjectDir)\Colider;$(ProjectDir)\Math;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -146,8 +146,14 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BaseCharacter.cpp" />
-    <ClCompile Include="Collider.cpp" />
-    <ClCompile Include="CollisionManager.cpp" />
+    <ClCompile Include="Board.cpp" />
+    <ClCompile Include="Colider\AABB.cpp" />
+    <ClCompile Include="Colider\Collider.cpp" />
+    <ClCompile Include="Colider\Collision.cpp" />
+    <ClCompile Include="Colider\CollisionManager.cpp" />
+    <ClCompile Include="Colider\OBB.cpp" />
+    <ClCompile Include="Colider\Plane.cpp" />
+    <ClCompile Include="Colider\Sphere.cpp" />
     <ClCompile Include="CommonFiles\DirectXCommon.cpp" />
     <ClCompile Include="CommonFiles\WinApp.cpp" />
     <ClCompile Include="ConvertString.cpp" />
@@ -184,15 +190,19 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
       <Optimization Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Disabled</Optimization>
     </ClCompile>
     <ClCompile Include="FixFPS.cpp" />
+    <ClCompile Include="flooar.cpp" />
     <ClCompile Include="FollowCamera.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="GetDescriptorHandle.cpp" />
     <ClCompile Include="GlobalVariables.cpp" />
+    <ClCompile Include="Goal.cpp" />
     <ClCompile Include="Ground.cpp" />
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="MatrixFunction.cpp" />
+    <ClCompile Include="Math\MatrixFunction.cpp" />
+    <ClCompile Include="Math\VectorFunction.cpp" />
     <ClCompile Include="Model.cpp" />
+    <ClCompile Include="MovingFlooar.cpp" />
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Primitive3D.cpp" />
@@ -202,16 +212,21 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="TextureManager.cpp" />
     <ClCompile Include="TimedCall.cpp" />
-    <ClCompile Include="VectorFunction.cpp" />
     <ClCompile Include="ViewProjection.cpp" />
     <ClCompile Include="WIndowProcedure.cpp" />
     <ClCompile Include="WorldTransform.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseCharacter.h" />
-    <ClInclude Include="Collider.h" />
-    <ClInclude Include="CollisionConfig.h" />
-    <ClInclude Include="CollisionManager.h" />
+    <ClInclude Include="Board.h" />
+    <ClInclude Include="Colider\AABB.h" />
+    <ClInclude Include="Colider\Collider.h" />
+    <ClInclude Include="Colider\Collision.h" />
+    <ClInclude Include="Colider\CollisionConfig.h" />
+    <ClInclude Include="Colider\CollisionManager.h" />
+    <ClInclude Include="Colider\OBB.h" />
+    <ClInclude Include="Colider\Plane.h" />
+    <ClInclude Include="Colider\Sphere.h" />
     <ClInclude Include="CommonFiles\DirectXCommon.h" />
     <ClInclude Include="CommonFiles\WinApp.h" />
     <ClInclude Include="ConvertString.h" />
@@ -228,15 +243,22 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="externals\imgui\imstb_textedit.h" />
     <ClInclude Include="externals\imgui\imstb_truetype.h" />
     <ClInclude Include="FixFPS.h" />
+    <ClInclude Include="flooar.h" />
     <ClInclude Include="FollowCamera.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="GetDescriptorHandle.h" />
     <ClInclude Include="GlobalVariables.h" />
+    <ClInclude Include="Goal.h" />
     <ClInclude Include="Ground.h" />
     <ClInclude Include="Input.h" />
-    <ClInclude Include="Matrix.h" />
-    <ClInclude Include="MatrixFunction.h" />
+    <ClInclude Include="Math\Matrix.h" />
+    <ClInclude Include="Math\MatrixFunction.h" />
+    <ClInclude Include="Math\Vector2.h" />
+    <ClInclude Include="Math\Vector3.h" />
+    <ClInclude Include="Math\Vector4.h" />
+    <ClInclude Include="Math\VectorFunction.h" />
     <ClInclude Include="Model.h" />
+    <ClInclude Include="MovingFlooar.h" />
     <ClInclude Include="Particle.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Primitive3D.h" />
@@ -246,10 +268,6 @@ copy "$(WindowsSdkDir)bin\$(TargetPlatformVersion)\x64\dxil.dll" "$(TargetDir)dx
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="TextureManager.h" />
     <ClInclude Include="TimedCall.h" />
-    <ClInclude Include="Vector2.h" />
-    <ClInclude Include="Vector3.h" />
-    <ClInclude Include="Vector4.h" />
-    <ClInclude Include="VectorFunction.h" />
     <ClInclude Include="ViewProjection.h" />
     <ClInclude Include="WindowProcedure.h" />
     <ClInclude Include="WorldTransform.h" />
