--- a/imgui.ini
+++ b/imgui.ini
@@ -53,3 +53,18 @@ Pos=197,54
 Size=233,164
 Collapsed=1
 
+[Window][floor1]
+Pos=228,56
+Size=278,165
+Collapsed=0
+
+[Window][movingfloor]
+Pos=60,60
+Size=165,159
+Collapsed=0
+
+[Window][goal]
+Pos=60,60
+Size=187,95
+Collapsed=0
+
