パーティクルをビルボード化

--- a/imgui.ini
+++ b/imgui.ini
@@ -29,7 +29,7 @@ Size=201,114
 Collapsed=0
 
 [Window][Sprite]
-Pos=35,430
+Pos=80,430
 Size=350,197
 Collapsed=0
 
@@ -69,7 +69,12 @@ Size=187,95
 Collapsed=0
 
 [Window][DebugCamera]
-Pos=60,60
+Pos=29,28
 Size=240,123
+Collapsed=0
+
+[Window][Particle]
+Pos=495,535
+Size=123,54
 Collapsed=0
 
